# mullvadtui

./: Cargo.toml  LICENSE  Makefile  README.md
src/: api.rs  app.rs  config.rs  main.rs  server.rs  ui.rs  wireguard.rs
