[package]
name = "mullvadtui"
version = "0.1.0"
edition = "2021"
description = "A TUI for managing Mullvad WireGuard VPN connections on Linux"
license = "GPL-2.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
nix = { version = "0.29", features = ["user"] }
